# edusuite_backend

./: Cargo.toml
db/: auth_security_definer_functions.sql  edusuite_backup_202604271541.sql  edusuite_backup_202604271611.sql  edusuite_backup_202604271649.sql  edusuite_backup_202604281152.sql  edusuite_schema_backup_202604271541.sql  edusuite_schema_backup_202604271611.sql  edusuite_schema_backup_202604271649.sql  edusuite_schema_backup_202604281152.sql  edusuite_schema_backup_202604281438.sql  edusuite_schema_backup_202605020623.sql  edusuite_schema_backup_202605020710.sql  edusuite_schema_backup_202605020847.sql  edusuite_schema_backup_202605041800.sql
db/setup/: 01_roles.sql  02_guc_defaults.sql  03_rls_permissive_policies.sql  04_seed_data.sql  README.md
migrations/: 20260426140352_initial_schema.sql  20260428000001_rls_setup.sql
src/: config.rs  error.rs  main.rs  state.rs
src/http/: auth.rs  extractors.rs
src/modules/auth_governance/: handlers.rs  mod.rs  models.rs  queries.rs
src/modules/comms/: mod.rs
src/modules/core/: mod.rs  models.rs  queries.rs  write_models.rs  write_queries.rs
src/modules/core/handlers/: audit.rs  contact.rs  member.rs  mod.rs  role.rs  tenant.rs  user.rs
src/modules/finance/: mod.rs  models.rs  queries.rs  write_models.rs  write_queries.rs
src/modules/finance/handlers/: aid.rs  billing.rs  (+5 more)
src/modules/hr/: handlers.rs  mod.rs  models.rs  queries.rs  write_models.rs  write_queries.rs
src/modules/lms/: handlers.rs  mod.rs  models.rs  queries.rs  write_models.rs  write_queries.rs
src/modules/ops/: mod.rs
src/modules/sis/: handlers.rs  mod.rs  models.rs  queries.rs  write_models.rs  write_queries.rs
testing/: edusuite_api.postman_collection.json  edusuite_core.postman_collection.json  edusuite_finance.postman_collection.json  edusuite_lms_writes.postman_collection.json
