[package]
name = "edusuite_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Async Runtime
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database (Compile-time verified SQL)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", "postgres", "uuid", "chrono", "ipnetwork"
] }

# Serialization & Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Observability & Config
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Auth
jsonwebtoken = "9.3"
argon2 = "0.5"
hex           = "0.4"
rand          = "0.8"
sha2          = "0.10"